<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="18pt"
        android:textColor="#ffffffff"
        android:text="@string/paragraph1" />

    <TextView
        android:id="@+id/lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/upper"
        android:layout_marginTop="42dp"
        android:textSize="18pt"
        android:textColor="#ffffffff"
        android:text="@string/paragraph2" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lower"
        android:layout_below="@+id/lower"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:background="#ffcccccc"
        android:textColor="#ff000000"
        android:text="@string/previous" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/previous"
        android:layout_alignBottom="@+id/previous"
        android:background="#ffcccccc"
        android:textColor="#ff000000"
        android:layout_alignRight="@+id/lower"
        android:layout_marginRight="35dp"
        android:text="@string/next" />



</RelativeLayout>